:art: Atualizando estrutura html

--- a/index.html
+++ b/index.html
@@ -29,37 +29,37 @@
           </tr>
         </thead>
         <tbody>
-          <tr class="discipline 1">
+          <tr class="discipline java">
             <td>Lógica com Java</td>
             <td>80</td>
             <td>06</td>
             <td>10</td>
           </tr>
-          <tr class="discipline 2">
+          <tr class="discipline web">
             <td>Programação Web</td>
             <td>60</td>
             <td>05</td>
             <td>08</td>
           </tr>
-          <tr class="discipline 3">
+          <tr class="discipline mobile">
             <td>Desenvolvimento Mobile</td>
             <td>60</td>
             <td>05</td>
             <td>08</td>
           </tr>
-          <tr class="discipline 4">
+          <tr class="discipline bd">
             <td>Banco de Dados</td>
             <td>80</td>
             <td>06</td>
             <td>10</td>
           </tr>
-          <tr class="discipline 5">
+          <tr class="discipline agile">
             <td>Agile</td>
             <td>50</td>
             <td>03</td>
             <td>05</td>
           </tr>
-          <tr class="discipline 6">
+          <tr class="discipline ux-ui">
             <td>UX/UI</td>
             <td>50</td>
             <td>03</td>
@@ -73,8 +73,8 @@
         </tfoot>
       </table>
 
-      <div class="overlay">
-        <div class="card"></div>
+      <div class="modal-overlay">
+        <div class="modal"></div>
       </div>
     </main>
     <script src="./main.js"></script>
