:bug: Adicionando type na tag script

--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@
         <div class="modal"></div>
       </div>
     </main>
-    <script src="./main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
